# FaceRegistration

./: CMakeLists.txt  FaceRegistration.sln  README.md
exe/PrCLR/: CMakeLists.txt  CMakeLists_2.txt  MyForm.h  PrCLR.vcxproj
exe/PrCLR/Release/PrCLR.tlog/: PrCLR.lastbuildstate  link.read.1.tlog
exe/PrCLR/x64/Release/: .NETFramework,Version=v4.5.2.AssemblyAttributes.asm  PrCLR.vcxproj.GenerateResource.Cache
exe/PrCLR/x64/Release/PrCLR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PrCLR.write.1u.tlog  link.command.1.tlog  link.write.1.tlog
exe/test2/: CMakeLists.txt  test.cpp  test2.vcxproj
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp  FaceLandmarkImg.h
lib/local/LandmarkDetector/: CMakeLists.txt
